fix: canter align pdf page

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -3,6 +3,11 @@
 @import './mixins';
 
 .#{$prefix}--document-preview-pdf-viewer {
+  display: flex;
+  justify-content: center;
+}
+
+.#{$prefix}--document-preview-pdf-viewer__wrapper {
   position: relative;
   @include pdfjsTextLayer;
 }
